# pt-tools

./: .gitignore  CONTRIBUTING  COPYING.GPL  Makefile.am  README.md  autogen.sh  configure.ac  pt-tools.spec
include/libptio/: ptio.h
lib/: Makefile.am  exports  libptio.pc  libptio.pc.in  ptio.h  ptio_ata.c  ptio_dev.c  ptio_scsi.c  ptio_sense.c
m4/: dontremove
man/: Makefile.am  ptio.8
src/: Makefile.am  ptio.c  ptio.h  ptio_ata.c  ptio_dev.c  ptio_scsi.c  ptio_sense.c
tools/: Makefile.am
tools/cli/: Makefile.am  ptio.c
